adding coveralls service

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,5 @@ sudo: false
 install: travis_retry composer install --no-interaction --prefer-source
 
 script: vendor/bin/phpunit
+
+after_success: coveralls
