adding coveralls service

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,12 @@ matrix:
 
 sudo: false
 
-install: travis_retry composer install --no-interaction --prefer-source
+install: 
+  - travis_retry composer install --no-interaction --prefer-source
+  - composer require satooshi/php-coveralls '~1.0'
 
-script: vendor/bin/phpunit
+script:
+  - mkdir -p build/logs 
+  - vendor/bin/phpunit
 
-after_success: coveralls
+after_success: php vendor/bin/coveralls
