--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
+    },
+    "require": {
+        "codeception/codeception": "^2.2"
     }
 }
