--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "tarsana/io",
     "description": "Simple IO helper classes",
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Amine Ben hammou",
@@ -13,10 +14,16 @@
             "Tarsana\\IO\\": "src/"
         }
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/matteosister/php-curry"
+        }
+    ],
+    "require": {
+        "tarsana/functional": "^1.2.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
-    },
-    "require": {
-        "codeception/codeception": "^2.2"
     }
 }
