--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "tarsana/functional": "^1.2.0"
+        "tarsana/functional": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
