--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "tarsana/io",
     "description": "Simple IO helper classes",
     "license": "MIT",
-    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Amine Ben hammou",
@@ -14,14 +13,8 @@
             "Tarsana\\IO\\": "src/"
         }
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/matteosister/php-curry"
-        }
-    ],
     "require": {
-        "tarsana/functional": "dev-master"
+        "tarsana/functional": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
