--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: php
 
 php:
-  - 5.4
-  - 5.5
-  - 5.6
   - 7.0
-  - hhvm
-
-matrix:
-    allow_failures:
-        - php: 7.0
+  - 7.1
 
 sudo: false
+
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 install:
   - travis_retry composer install --no-interaction --prefer-source
